--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
   <title>materialize-webpage</title>
   <link rel="stylesheet" href="./materialize.css">
   <style>
+
+   
     /*Table
 ----------------------------------------*/
     body {
       margin-left: 1.5em;
       margin-right: 1.5em;
+      background-color: gray;
     }
 
     .table {
@@ -36,7 +39,7 @@
     }
 
     .backImage {
-      background-image: url('/images/istockphoto-184421942-612x612.jpg');
+      background-image: url('images/istockphoto-184421942-612x612.jpg');
       width: 250px;
       background-size: cover;
       background-position: center;
@@ -47,7 +50,7 @@
   </style>
 </head>
 
-<body class="amber lighten-4">
+<body>
   <div class="row">
     <h1 class="col s12 red accent-2">{{user.fullName}} </h1>
   </div>
