--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
     }
 
     .overlay {
-      background-color: rgba(128, 120, 120, 0.5); /*To hinder the transparanncy*/
+      background-color: rgba(128, 120, 120, 0.5); /*To hinder the transparancy*/
       padding: 1em;
       border-radius: 5px;
     }
-/*Table---------------------------------------------------------------------*/
+    
+/*Table---------------------------------------------------------------------*/ 
     .table {
       border: 1px solid black;
     }
