--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     body {
       margin-left: 1.5em;
       margin-right: 1.5em;
+      background-color: lightgray;
       background-image: url('/images/TABLE.jpg');
       background-size: cover;
       background-position: center;
