--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       margin-left: 1.5em;
       margin-right: 1.5em;
       background-color: lightgray;
-      background-image: url('/images/TABLE.jpg');
+      background-image: url('./images/TABLE.jpg');
       background-size: cover;
       background-position: center;
     }
