--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+"
 <!doctype html>
 <html lang="en">
 
@@ -8,10 +9,9 @@
   <title>materialize-webpage</title>
   <link rel="stylesheet" href="./materialize.css">
   <style>
-   
     body {
-      margin-left: 1.5em;
-      margin-right: 1.5em;
+      margin-left: 24px;
+      margin-right: 24px;
       background-color: lightgray;
       background-image: url('./images/TABLE.jpg');
       background-size: cover;
@@ -19,12 +19,13 @@
     }
 
     .overlay {
-      background-color: rgba(128, 120, 120, 0.5); /*To hinder the transparancy*/
+      background-color: rgba(56, 53, 53, 0.5);
+      /*To hinder the transparancy*/
       padding: 1em;
       border-radius: 5px;
     }
-    
-/*Table---------------------------------------------------------------------*/ 
+
+    /*Table---------------------------------------------------------------------*/
     .table {
       border: 1px solid black;
     }
@@ -46,23 +47,26 @@
     }
 
     /* Enhance text readability */
-    h1, h2, p, th {
-      color: white; 
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); 
+    h1,
+    h2,
+    p,
+    th {
+      color: white;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
     }
   </style>
 </head>
 
 <body>
-  <div class="row overlay">
+  <div class="row overlay">   <!-----Every div has to start with an overlay to enhance reability-->
     <h1 class="col s12 teal lighten-2">{{user.fullName}}</h1>
   </div>
-
+  <!----This is the first section of the code------------------->
   <div class="row backImage overlay">
     <div class="col s12 m6"></div>
     <img src="{{user.photo}}" width="270" height="300" class="responsive-img square" style="float:right;">
   </div>
-
+  <!----This is the second section of the code------------------->
   <div class="row overlay">
     <h2 class="col s12 teal lighten-2">{{city.name}}</h2>
     <div class="row">
@@ -71,6 +75,7 @@
     </div>
   </div>
 
+  <!----This is the third section of the code------------------->
   <div class="overlay">
     <div class="row">
       <h2 class="col s12 teal lighten-2">{{foreignLanguage.language}}</h2>
@@ -102,6 +107,7 @@
       </div>
     </div>
   </div>
+  <!----This is the fourth section of the code------------------->
 
   <div class="overlay">
     <div class="row">
@@ -144,6 +150,7 @@
     </div>
   </div>
 
+  <!----This is the fifth section of the code------------------->
   <div class="overlay">
     <div class="row">
       <h2 class="col s12 teal lighten-2">Historical places</h2>
@@ -151,7 +158,7 @@
         <div class="row">
 
           <div class="col s12 l4">
-            <h3 class="col s12 light-blue lighten-5">{{historicalPlaces.[0].name}}</h3>
+            <h3 class="col s12 indigo lighten-5">{{historicalPlaces.[0].name}}</h3>
             <div class="row">
               <p class="col s6" style="text-align: justify;">
                 {{historicalPlaces.[0].description}}</p>
@@ -160,7 +167,7 @@
           </div>
 
           <div class="col s12 l4">
-            <h3 class="col s12 light-blue lighten-5">{{historicalPlaces.[1].name}}</h3>
+            <h3 class="col s12 indigo lighten-5">{{historicalPlaces.[1].name}}</h3>
             <div class="row">
               <p class="col s6 mid-text" style="text-align: justify;">{{historicalPlaces.[1].description}}</p>
               <img class="col s6" src="{{historicalPlaces.[1].photo}}" style="padding-top: 1.5em;">
@@ -168,7 +175,7 @@
           </div>
 
           <div class="col s12 l4">
-            <h3 class="col s12 light-blue lighten-5">{{historicalPlaces.[2].name}}</h3>
+            <h3 class="col s12 indigo lighten-5">{{historicalPlaces.[2].name}}</h3>
             <div class="row">
               <p class="col s6" style="text-align: justify;">{{historicalPlaces.[2].description}}</p>
               <img class="col s6" src="{{historicalPlaces.[2].photo}}" style="padding-top: 1.5em;">
@@ -180,4 +187,5 @@
   </div>
   <footer>Copyrights reserved @MntimandeConsultingServices🐊 </footer>
 </body>
-</html>
+
+</html>"
